--- a/src/main/resources/templates/printFile.html
+++ b/src/main/resources/templates/printFile.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Вывод файла</title>
+    <title>Вывод истории</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -15,7 +15,9 @@
     <label for="file">Выберите .xml или .json файл с историей игры "Крестики-нолики" для отображения:</label> <br><br>
     <input type="file" id="file" name="file"><br>
     <input type="submit">
+</form> <br>
+<form th:action="'/'" method="get">
+    <button type="submit">Вернуться на главную страницу
 </form>
-
 </body>
 </html>
