fixed bugs, added tests.

--- a/src/main/resources/templates/gameplay/finalResult.html
+++ b/src/main/resources/templates/gameplay/finalResult.html
@@ -13,7 +13,7 @@
 <body class="container mt-5">
 <p style="border: peru" th:text="${save}"><strong></strong></p><br><br>
 <p style="border: peru" th:text="${message}"><strong></strong></p><br><br>
-<form action="/game/final-result" method="post">
+<form action="/gameplay/final-result" method="post">
     <fieldset>
         <legend class="green">Хотите сохранить Ваш рейтинг в отдельном файле - Rating.txt?</legend>
         <p><label> <input type="radio" name="saveR" required value="Да">Да</label></p>
