--- a/src/main/resources/templates/gameplay/result.html
+++ b/src/main/resources/templates/gameplay/result.html
@@ -22,7 +22,7 @@
 <br>
 <p class="result" th:text="${message}"><strong></strong></p><br><br>
 
-<form action="/game/result" method="post">
+<form action="/gameplay/result" method="post">
     <fieldset>
         <legend class="green">Вы хотите сохранить историю данной игры в отдельный файл?</legend>
         <p><label> <input type="radio" name="saveH" required value="Да">Да</label></p>
