--- a/src/main/resources/templates/gameplay/start.html
+++ b/src/main/resources/templates/gameplay/start.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-<form th:action="'/game/new-field'" method="post">
+<form th:action="'/gameplay/new-field'" method="post">
     <label for="nameX"><strong>Введите имя первого игрока (Ходит крестиками):</strong></label><br>
     <input autofocus type="text" id="nameX" name="nameX" placeholder="Имя игрока X" required><br>
     <label for="nameO"><strong>Введите имя второго игрока (Ходит ноликами):</strong></label><br>
